--- a/src/pages/ru/blog/[...slug].astro
+++ b/src/pages/ru/blog/[...slug].astro
@@ -1,11 +1,11 @@
 ---
 import { getCollection, render } from 'astro:content';
-import BlogPost from '../../layouts/BlogPost.astro';
-import { getLocaleFromPostId, getBaseSlug } from '../../lib/locale';
+import BlogPost from '../../../layouts/BlogPost.astro';
+import { getLocaleFromPostId, getBaseSlug } from '../../../lib/locale';
 
 export async function getStaticPaths() {
   const allPosts = (await getCollection('blog'))
-    .filter((post) => !post.data.draft && getLocaleFromPostId(post.id) === 'en')
+    .filter((post) => !post.data.draft && getLocaleFromPostId(post.id) === 'ru')
     .sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf());
 
   return allPosts.map((post, i) => ({
@@ -39,7 +39,7 @@ const readingTime = Math.max(1, Math.ceil(words / 225));
   headings={headings}
   prevPost={prevPost ? { slug: getBaseSlug(prevPost.id), title: prevPost.data.title } : null}
   nextPost={nextPost ? { slug: getBaseSlug(nextPost.id), title: nextPost.data.title } : null}
-  locale="en"
+  locale="ru"
   postId={post.id}
 >
   <Content />
